<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:layout_height="match_parent">

    <LinearLayout
    android:id="@+id/area_direccion"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_person_add_black_18dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp">

        <EditText
            android:id="@+id/campo_nom_cli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_nombre"
            android:inputType="text"
            android:singleLine="true"
            android:text="Jaime" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>

    <LinearLayout
        android:id="@+id/area_ape_pat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/area_direccion"
        android:orientation="horizontal">



        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_nombreapellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="58dp">

            <EditText
                android:id="@+id/campo_nombrepat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_ape"
                android:inputType="text"
                android:singleLine="true"
                android:text="Aguilar" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/area_nombremat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_ape_pat"
        android:orientation="horizontal">



        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_nombremat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="58dp">

            <EditText
                android:id="@+id/campo_nombremat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_nombremat"
                android:inputType="text"
                android:singleLine="true"
                android:text="Cabezas" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>






    <LinearLayout
        android:id="@+id/area_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_nombremat"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_fec_nac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_redeem_black_18dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <EditText
                android:id="@+id/campo_fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/hint_fec"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/area_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_fecha"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_correo"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="2"
            android:src="@drawable/ic_mail_black_18dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <EditText
                android:id="@+id/campo_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_correo"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:text="jaime.ac8866@gmail.com" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/area_clave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_correo"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_clave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_border_color_black_18dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_clave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <EditText
                android:id="@+id/clave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_clave"
                android:inputType="textPassword"
                android:text="jaimejose" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/area_genero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_clave"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_gene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_group_add_black_24dp" />

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/android_material_design_spinner"
            android:layout_width="288dp"
            android:layout_marginLeft="38dp"
            android:layout_height="wrap_content"
            android:hint="Seleccionar su Genero"
            android:textColorHint="#05ab9a"
            app:met_floatingLabel="normal"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_marginTop="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:layout_below="@+id/area_genero"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <Button
            android:id="@+id/xxbtn"
            android:layout_width="0dp"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:layout_weight="0.34"
            android:backgroundTint="@color/com_facebook_blue"
            android:text="@string/accion_siguiente"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/boton_regcli"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.34"
            android:backgroundTint="@color/com_facebook_blue"
            android:text="@string/accion_siguiente"
            android:textColor="@android:color/white" />
    </LinearLayout>


    




</RelativeLayout>
