<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:layout_height="match_parent">

    <LinearLayout
    android:id="@+id/area_direccion"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_cliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_person_add_black_18dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp">

        <EditText
            android:id="@+id/campo_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_direccion"
            android:maxLines="4"

            android:singleLine="false"
            android:text="Villa el Salvador , Sector 3 Grupo 25 Manzana A Lote 14 , Entre avenidas Cesar Vallejos y Micaela Bastidas" />
    </android.support.design.widget.TextInputLayout>


</LinearLayout>


    <LinearLayout
        android:id="@+id/area_genero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_direccion"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_gene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_group_add_black_24dp" />

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/cbodistrito"
            android:layout_width="288dp"
            android:layout_marginLeft="38dp"
            android:layout_height="wrap_content"
            android:hint="Seleccionar su distrito"
            android:textColorHint="#05ab9a"
            app:met_floatingLabel="normal"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/area_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_genero"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_call_black_18dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <EditText
                android:id="@+id/campo_telefono2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_telefono"
                android:inputType="phone"
                android:text="987379413" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>




    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_marginTop="0dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"

        android:layout_below="@+id/area_genero"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boton_regcli"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/com_facebook_blue"
            android:text="@string/accion_aceptar"
            android:textColor="@android:color/white" />
    </LinearLayout>




</RelativeLayout>
