<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:id="@+id/area_txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@+id/area_txt"
        android:orientation="vertical">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Utilizar mis datos"
        android:id="@+id/switch1" />




        </LinearLayout>


    <LinearLayout
        android:id="@+id/area_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_person_add_black_18dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <EditText
                android:id="@+id/campo_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_nombre"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/area_ape_pat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_below="@+id/area_nombre"
        android:orientation="horizontal">



        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_nombrepat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="58dp">

            <EditText
                android:id="@+id/campo_nombrepat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Apellidos"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/area_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_ape_pat"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_call_black_18dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <EditText
                android:id="@+id/campo_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_telefono"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/xxcon"
            android:layout_width="0dp"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:layout_weight="0.34"
            android:backgroundTint="@color/com_facebook_blue"
            android:text="@string/accion_siguiente"
            android:textColor="@android:color/white" />


        <Button
            android:id="@+id/btn_reg_ave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.34"
            android:backgroundTint="@color/com_facebook_blue"
            android:text="Registrar tu Averia"
            android:textColor="@android:color/white" />


        <!--<Button-->
            <!--android:id="@+id/boton_aceptar"-->
            <!--android:layout_width="wrap_content"-->

            <!--android:layout_height="match_parent"-->
            <!--android:layout_weight="1"-->
            <!--android:backgroundTint="@color/com_facebook_blue"-->
            <!--android:text="Registrar Averia"-->
            <!--android:textColor="@android:color/white" />-->





    </LinearLayout>




</LinearLayout>